--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Andy Web Page</h1>
+        <h1>Welcome to Andy Web Page 2</h1>
     </header>
     <nav>
         <ul>
